some acts(preparing continue)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Barbershop</title>
+  <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
-  
+  <h1>Hello, World</h1>
 </body>
 </html>
