ADD SPLIT COMITS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1 class="page-header__title">Барбершоп</h1>
     <nav class="main-nav">
       <ul class="main-nav__list">
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
+        <li class="main-nav__item">1</li>
+        <li class="main-nav__item">2</li>
+        <li class="main-nav__item">3</li>
+        <li class="main-nav__item">4</li>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
