--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li class="main-nav__item">1</li>
         <li class="main-nav__item">2</li>
         <li class="main-nav__item">3</li>
-        <li class="main-nav__item">4</li>
+	<li class="main-nav__item">4</li>
+	<a href="#">button<a/>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
@@ -21,3 +22,5 @@
   </header>
 </body>
 </html>
+
+:q
