Change nav in index

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1 class="page-header__title">Барбершоп</h1>
     <nav class="main-nav">
       <ul class="main-nav__list">
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
+        <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, mollitia voluptatibus possimus aliquam repellat et sint molestiae non iure eius? Temporibus quae optio vero sit, modi repellat at cumque. Eos.</li>
+        <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci necessitatibus, molestias error.</li>
+        <li class="main-nav__item">sfsfsfs sdgsdfg reh </li>
+        <li class="main-nav__item">wgergwer </li>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
