create new branch and add some itmes in main-nav__list

--- a/catalog.html
+++ b/catalog.html
@@ -14,6 +14,8 @@
         <li class="main-nav__item"></li>
         <li class="main-nav__item"></li>
         <li class="main-nav__item"></li>
+        <li class="main-nav__item">Lorem ipsum dolor sit amet.</li>
+        <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur.</li>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
