Добавил кнопку в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -16,6 +16,7 @@
         <li class="main-nav__item"></li>
         <li class="main-nav__item">Lorem ipsum dolor sit amet.</li>
         <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur.</li>
+        <button class="page-header__btn">Download</button>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
