создал новую ветку для теста

--- a/catalog.html
+++ b/catalog.html
@@ -10,17 +10,20 @@
     <h1 class="page-header__title">Барбершоп</h1>
     <nav class="main-nav">
       <ul class="main-nav__list">
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item"></li>
-        <li class="main-nav__item">Lorem ipsum dolor sit amet.</li>
-        <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur.</li>
-        <button class="page-header__btn">Download</button>
+        <div>
+          <li class="main-nav__item"></li>
+          <li class="main-nav__item"></li>
+          <li class="main-nav__item"></li>
+          <li class="main-nav__item"></li>
+          <li class="main-nav__item">Lorem ipsum dolor sit amet.</li>
+          <li class="main-nav__item">Lorem ipsum dolor sit amet, consectetur.</li>
+          <button class="page-header__btn">Download</button>
+          <button class="page-header__btn">Info</button>
+        </div>
       </ul>
     </nav>
     <h2 class="page-header__promo">Стрижка у нас это выгодно!</h2>
     <p class="page-header__lead">Мужская стрижка требует точного подхода. Обратимся к статистике: </p>
   </header>
 </body>
-</html>
+</html>`
